--- a/src/GtaKeyboardHook/GtaKeyboardHook.csproj
+++ b/src/GtaKeyboardHook/GtaKeyboardHook.csproj
@@ -14,6 +14,7 @@
     <WarningLevel>4</WarningLevel>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
     <Deterministic>true</Deterministic>
+    <LangVersion>8</LangVersion>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <PlatformTarget>AnyCPU</PlatformTarget>
@@ -205,8 +206,19 @@
       <SubType>Designer</SubType>
     </ApplicationDefinition>
     <Compile Include="Infrastructure\AppConfigProvider.cs" />
+    <Compile Include="Infrastructure\BackgroundWorkers\BaseBackgroundWorker.cs" />
+    <Compile Include="Infrastructure\BackgroundWorkers\IBackgroundWorker.cs" />
+    <Compile Include="Infrastructure\BackgroundWorkers\PixelTrackerBackgroundWorker.cs" />
+    <Compile Include="Infrastructure\BackgroundWorkers\SendKeyEventBackgroundWorker.cs" />
+    <Compile Include="Infrastructure\BackgroundWorkers\TaskFactories\ITaskFactory.cs" />
+    <Compile Include="Infrastructure\BackgroundWorkers\TaskFactories\MultipleTaskFactory.cs" />
+    <Compile Include="Infrastructure\BackgroundWorkers\TaskFactories\SingleTaskFactory.cs" />
     <Compile Include="Infrastructure\RelayCommand.cs" />
     <Compile Include="Infrastructure\Win32ApiHelper.cs" />
+    <Compile Include="Model\Messages\PixelColorChangedMessage.cs" />
+    <Compile Include="Model\Parameters\CheckPixelDifferenceParameter.cs" />
+    <Compile Include="Model\Parameters\SendKeyEventParameter.cs" />
+    <Compile Include="TinyMessenger.cs" />
     <Compile Include="ViewModel\MainWindowViewModel.cs" />
     <Page Include="MainWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
@@ -250,6 +262,11 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Resources\intro.mp3">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="..\..\packages\MaterialDesignThemes.3.1.3\build\MaterialDesignThemes.targets" Condition="Exists('..\..\packages\MaterialDesignThemes.3.1.3\build\MaterialDesignThemes.targets')" />
