--- a/src/GtaKeyboardHook/packages.config
+++ b/src/GtaKeyboardHook/packages.config
@@ -31,6 +31,7 @@
   <package id="System.Text.Json" version="4.7.2" targetFramework="net472" />
   <package id="System.Threading.Tasks.Extensions" version="4.5.4" targetFramework="net472" />
   <package id="System.ValueTuple" version="4.5.0" targetFramework="net472" />
+  <package id="TinyMessenger" version="1.0" targetFramework="net472" />
   <package id="Vanara.Core" version="3.2.13" targetFramework="net472" />
   <package id="Vanara.PInvoke.Gdi32" version="3.2.13" targetFramework="net472" />
   <package id="Vanara.PInvoke.Kernel32" version="3.2.13" targetFramework="net472" />
