--- a/src/GtaKeyboardHook.Tests/GtaKeyboardHook.Tests.csproj
+++ b/src/GtaKeyboardHook.Tests/GtaKeyboardHook.Tests.csproj
@@ -36,6 +36,7 @@
         <Reference Include="System" />
         <Reference Include="System.Core" />
         <Reference Include="System.Data" />
+        <Reference Include="System.Windows.Forms" />
         <Reference Include="System.Xml" />
         <Reference Include="nunit.framework, Version=3.5.0.0, Culture=neutral, PublicKeyToken=2638cd05610744eb">
             <HintPath>..\..\packages\NUnit.3.5.0\lib\net45\nunit.framework.dll</HintPath>
@@ -43,6 +44,7 @@
     </ItemGroup>
     <ItemGroup>
         <Compile Include="JsonConfigurationManagerTests.cs" />
+        <Compile Include="GetScanCodeTests.cs" />
         <Compile Include="Properties\AssemblyInfo.cs" />
         <Compile Include="TestData\TestDataHolder.cs" />
     </ItemGroup>
