--- a/src/GtaKeyboardHook/GtaKeyboardHook.csproj
+++ b/src/GtaKeyboardHook/GtaKeyboardHook.csproj
@@ -207,7 +207,7 @@
     </ApplicationDefinition>
     <Compile Include="Infrastructure\BackgroundWorkers\BaseBackgroundWorker.cs" />
     <Compile Include="Infrastructure\BackgroundWorkers\ConfigSaverBackgroundWorker.cs" />
-    <Compile Include="Infrastructure\BackgroundWorkers\IBackgroundWorker.cs" />
+    <Compile Include="Infrastructure\BackgroundWorkers\IExecutable.cs" />
     <Compile Include="Infrastructure\BackgroundWorkers\PixelTrackerBackgroundWorker.cs" />
     <Compile Include="Infrastructure\BackgroundWorkers\SendKeyEventBackgroundWorker.cs" />
     <Compile Include="Infrastructure\BackgroundWorkers\TaskFactories\ITaskFactory.cs" />
@@ -218,6 +218,8 @@
     <Compile Include="Infrastructure\Helpers\ColorHelper.cs" />
     <Compile Include="Infrastructure\Helpers\KeysHelper.cs" />
     <Compile Include="Infrastructure\Helpers\Win32ApiHelper.cs" />
+    <Compile Include="Infrastructure\Interfaces\IBitmapHolder.cs" />
+    <Compile Include="Infrastructure\PreviewImageHolder.cs" />
     <Compile Include="Infrastructure\RelayCommand.cs" />
     <Compile Include="Model\Configuration\ProfileConfiguration.cs" />
     <Compile Include="Model\Messages\PixelColorChangedMessage.cs" />
@@ -274,6 +276,7 @@
     <Content Include="Resources\intro.mp3">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
+    <Resource Include="Resources\logo.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="..\..\packages\MaterialDesignThemes.3.1.3\build\MaterialDesignThemes.targets" Condition="Exists('..\..\packages\MaterialDesignThemes.3.1.3\build\MaterialDesignThemes.targets')" />
